kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tickbook
  labels:
    app.kubernetes.io/part-of: tickbook
